# leaf

./: .gitignore  Cargo.toml  Makefile.toml  README.md
.cargo/: config.toml
hardware/dmw1000-carrier/: dmw1000-carrier.kicad_pcb
hardware/gateway-hat/: fp-info-cache  gateway-hat.kicad_pcb  gateway-hat.kicad_pro
hardware/mobile-tag/: .gitignore  mobile-tag  mobile-tag-B_Cu.gbr  mobile-tag-Edge_Cuts.gbr  mobile-tag-F_SilkS.gbr  mobile-tag-schematics.bak  mobile-tag.kicad_pcb  mobile-tag.kicad_prl  mobile-tag.kicad_pro  mobile-tag.kicad_sch  mobile-tag_cpl_jlc.csv  sym-lib-table
hardware/mobile-tag/Components.pretty/: SKQUCAA010.kicad_mod
