[workspace]
members = [
    "packages/gateway",
    "packages/ingestor",
    "packages/uart-types",
    "packages/tag",
]


# [package.metadata.rwmc_project.profile.dev]

# # Cargo.toml
# # [profile.dev]
# debug = 1 # default is `true`; not needed if not already overridden

# [profile.release]
# debug = 1 # default is `false`; using `true` is also OK

# [profile.dev.package.nrf-tests]
# codegen-units = 1
# debug = 2
# debug-assertions = true # <-
# incremental = false
# opt-level = 3 # <-
# overflow-checks = true # <-

# [profile.release.package.nrf-tests]
# codegen-units = 1
# debug = 2
# debug-assertions = false # <-
# incremental = false
# opt-level = 3 # <-
# overflow-checks = false # <-
